5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_2704.log
== TEST (2019-04-09 17:27:22) 
-- CODE:
nota = int(input("qual a nota:")
					 
-- ERROR:
File "XXXX", line 3
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:29:07) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= 6):
	print('S')
else:
	print('N')
-- EXECUTION TIME:
0.161386
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    if (nota >= 6):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:29:08) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= 6):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if (nota >= 6):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:29:44) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= '0 a 10'):
	print('S')
else:
	print('N')
-- EXECUTION TIME:
0.161375
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    if (nota >= '0 a 10'):
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:29:45) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= '0 a 10'):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if (nota >= '0 a 10'):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:29:59) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= 5):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if (nota >= 5):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:30:07) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= 5)
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 3
    print('S')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:30:08) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= 5)
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 3
    print('S')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:30:09) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= 5)
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 3
    print('S')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:30:10) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= 5)
	print('S')
else:
	print('N')
-- EXECUTION TIME:
0.137463
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 3
    print('S')
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:30:10) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= 5)
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 3
    print('S')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:30:13) 
-- CODE:
nota = int(input("qual a nota:")
if (nota >= 5)
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 3
    print('S')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:46:28) 
-- CODE:
nota = float(input("qual a nota:")
if (nota >= 5):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if (nota >= 5):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:46:29) 
-- CODE:
nota = float(input("qual a nota:")
if (nota >= 5):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if (nota >= 5):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:47:02) 
-- CODE:
nota = float(input("qual a nota:")
if (nota >= 6):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if (nota >= 6):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:48:22) 
-- CODE:
nota = float(input("qual a nota:")
if (nota > 0 and >10):
	print('S')
else:
	print('N')
-- EXECUTION TIME:
0.195222
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    if (nota > 0 and >10):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:48:23) 
-- CODE:
nota = float(input("qual a nota:")
if (nota > 0 and >10):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if (nota > 0 and >10):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:48:48) 
-- CODE:
nota = float(input("qual a nota:")
if (nota >=):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if (nota >=):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:49:00) 
-- CODE:
nota = float(input("qual a nota:")
if (nota >= 6 ):
	print('S')
else:
	print('N')
-- EXECUTION TIME:
0.204427
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    if (nota >= 6 ):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:49:01) 
-- CODE:
nota = float(input("qual a nota:")
if (nota >= 6 ):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if (nota >= 6 ):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:49:07) 
-- CODE:
nota = float(input("qual a nota:")
if ( nota >= 6 )
	print('S')
else:
	print('N')
-- EXECUTION TIME:
0.154982
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 3
    print('S')
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:49:08) 
-- CODE:
nota = float(input("qual a nota:")
if ( nota >= 6 )
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 3
    print('S')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:49:19) 
-- CODE:
nota = float(input("qual a nota:")
if ( nota >= 6 ):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if ( nota >= 6 ):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:50:06) 
-- CODE:
nota = float(input('10')
if ( nota = 10 ):
	print('S')
else:
	print('N')
-- EXECUTION TIME:
0.135765
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    if ( nota = 10 ):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:50:07) 
-- CODE:
nota = float(input('10')
if ( nota = 10 ):
	print('S')
else:
	print('N')
-- ERROR:
File "XXXX", line 2
    if ( nota = 10 ):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:50:12) 
-- CODE:
nota = float(input('10')
if ( nota = 10 ):
	print('S')
else:
	print('N')
-- EXECUTION TIME:
0.1779
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    if ( nota = 10 ):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:50:12) 
-- CODE:
nota = float(input('10')
if ( nota = 10 ):
	print('S')
else:
	print('N')
-- EXECUTION TIME:
0.220563
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    if ( nota = 10 ):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:47:59) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (10*10/10))
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:49:50) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota * 10/10)
else:
	print(nota)
-- EXECUTION TIME:
0.26428
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:49:51) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:04) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:50:06) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota * 10/10)
else:
	print(nota)
-- EXECUTION TIME:
0.166098
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:06) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:30) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:50:32) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- EXECUTION TIME:
0.188035
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:33) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:50:33) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- EXECUTION TIME:
0.273059
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:33) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:50:33) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- EXECUTION TIME:
0.235226
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:50:33) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- EXECUTION TIME:
0.221923
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:33) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:33) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:45) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:50:47) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- EXECUTION TIME:
0.146032
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:47) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:50:51) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/100)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:50:52) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/100)
else:
	print(nota)
-- EXECUTION TIME:
0.138046
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:51:09) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")
if ( bonificacao == 'S' ):
	print(nota + (nota * 10/10)
else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:53:05) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")

if ( bonificacao == 'S' ):
	print(nota + 10/10)

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:58:10) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")

if ( bonificacao == 'S' ):
	
	print(nota )

else:
	print(nota)
-- EXECUTION TIME:
0.163544
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:58:10) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")

if ( bonificacao == 'S' ):
	
	print(nota )

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:58:16) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")

if ( bonificacao == 'S' ):
	
	print(nota)

else:
	print(nota)
-- EXECUTION TIME:
0.136779
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:58:17) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")

if ( bonificacao == 'S' ):
	
	print(nota)

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:07:05) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")

if ( bonificacao == 'S' ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:07:45) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")

if ( bonificacao == 'S' ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:07:45) 
-- CODE:
nota = float(input("nota:")
bonificacao = float("bonificacao:")

if ( bonificacao == 'S' ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- EXECUTION TIME:
0.141083
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    bonificacao = float("bonificacao:")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:08:12) 
-- CODE:
nota = float(input("nota:")
bonificacao = float(input("bonificacao:"))

if ( bonificacao == 'S' ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = float(input())
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:09:02) 
-- CODE:
nota = float(input("nota:")
bonificacao = input("bonificacao:")

if ( bonificacao == 'S' ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonificacao = input()
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:09:55) 
-- CODE:
nota = float(input("nota:")
bonus = input("bonificacao:")
if ( bonificacao == 'S' ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonus = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:10:08) 
-- CODE:
nota = float( input("nota:" )
bonus = input( "bonificacao:" )
if ( bonificacao == 'S' ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonus = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:11:10) 
-- CODE:
nota = float( input("nota:" )
bonus = input( "bonificacao:" )
if ( bonificacao == 'S' ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- ERROR:
File "XXXX", line 2
    bonus = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:11:31) 
-- CODE:
nota = float(input("nota:" ))
bonus = input( "bonificacao:" )
if ( bonificacao == 'S' ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( bonificacao == 'S' ):
NameError: name 'bonificacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:12:46) 
-- CODE:
nota = float(input("nota:" ))
bonus = input( "bonificacao:" )
if ( bonificacao == "S" ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( bonificacao == "S" ):
NameError: name 'bonificacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:13:30) 
-- CODE:
nota = float(input("nota:" ))
bonus = input( "bonificacao:" )
if ( bonus == "S" ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:13:58) 
-- CODE:
nota = float(input("nota:" ))
bonus = input( "bonificacao:" )
if ( bonus == "S" ):
	
	print(nota + (nota * 0.1))

else:
	print(nota)
-- EXECUTION TIME:
0.156174
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
